--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["Ashrit Yarava <ashdragon95@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+clipboard = "^0.0.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
